# baddns

./: 404.html  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  read-sources.yml  signature-test.yml  tests.yaml
baddns/: base.py  cli.py  mock_blasthttp.py
baddns/lib/: email_base.py  httpmanager.py  logging.py  matcher.py
baddns/modules/: cname.py  dmarc.py  mtasts.py  ns.py  references.py  spf.py  txt.py  wildcard.py
baddns/scripts/: signaturetest.py
docs/: index.md
modules/: index.html
research/: index.html
resources/: index.html
signatures/: index.html
tests/: cli_extended_test.py  cli_test.py  cname_test.py  conftest.py  dmarc_test.py  dnsmanager_test.py  dnswalk_extended_test.py  helpers.py  httpmanager_test.py  logging_test.py  matcher_extended_test.py  matcher_test.py  modules_coverage_test.py  mtasts_test.py  ns_test.py  references_test.py  spf_test.py  txt_test.py  wildcard_test.py
