[project]
name = "baddns"
dynamic = ["version"]
description = "Check subdomains for subdomain takeovers and other DNS tomfoolery"
authors = [{name = "liquidsec", email = "paul.mueller08@gmail.com"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "dnspython>=2.4.2",
    "blastdns==1.9.1",
    "colorama>=0.4.6",
    "python-whois>=0.9.6",
    "tldextract>=5.1.1",
    "python-dateutil==2.9.0.post0",
    "blasthttp>=0.2.0",
    "cloudcheck>=10,<11",
]

[project.urls]
Repository = "https://github.com/blacklanternsecurity/baddns"
Homepage = "https://github.com/blacklanternsecurity/baddns"
Documentation = "https://www.blacklanternsecurity.com/baddns/"

[project.scripts]
baddns = "baddns.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5,<8",
    "pytest-asyncio>=0.21.1,<1.5.0",
    "pytest-mock>=3.11.1",
    "pyfakefs>=5.10,<7.0",
    "mock>=5.1.0",
    "ruff>=0.15.4",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "baddns/__version__.py"

[tool.hatch.build.targets.sdist]
include = ["baddns/**", "signatures/**"]

[tool.hatch.build.targets.wheel]
packages = ["baddns"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["F", "E722"]
ignore = ["F403", "F405", "F541"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit = ["baddns/scripts/*"]
